--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -3,19 +3,28 @@
 
 ## Initiatie
 
+### Beschrijven Projectopdracht
 
+### Vaststellen Projectopdracht
 
 ## Wensen en eisen
 
-
-
 ## Ontwikkeling
 
+### Methodieken voor collectief samenstellen PCB-data
 
+#### Voorbeelddocumenten Aanbesteden en contracteren
+
+#### Eisensets
+Top-down of Bottom-up
 
 ## Uitvoering
 
+#### Vaststellen PCB-deelproduct door Projectteam
 
+#### Vrijgeven PCB-deelproduct door Kernteam
+
+#### Publicatie PCB-deelproduct door CROW
 
 ## Documentatie
 
