--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -4,8 +4,17 @@
 ## Initiatie
 
 ### Beschrijven Projectopdracht
+In de Jaarplannen worden de geplande deelopdrachten voor het voorliggende jaar beschreven. Elk van deze opdrachten wordt voor start uitgewerkt in een concept-Projectopdracht. 
+Voor het opstellen van de Projectopdracht wordt gebruik gemaakt van de vigerende versie van het sjabloon "Projectopdracht" (zie paragraaf 5. Documentatie).
 
 ### Vaststellen Projectopdracht
+De concept-Projectopdracht wordt aan het Kernteam in haar maandelijkse vergadercyclus ter vaststelling aangeboden. Het Kernteam toetst de opdracht aan de volgende onderdelen:
+* Relevantie ten opzichte van het Jaarprogramma
+* Realistische planning
+* Expliciet doel en resultaat
+* Minimaal vereiste omvang van het samen te stellen projectteam (voldoende representatief voor gehele werkveld)
+* Juiste vaststellingsprocedure (criteria, quorum)
+Een vastgestelde projectopdracht is tevens het startsein voor de voorzitter en de secretaris van het beoogde Projectteam (zie paragraaf 3.1.3) om met de opdracht te starten.
 
 ## Wensen en eisen
 
