--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -36,8 +36,14 @@ Top-down of Bottom-up
 #### Publicatie PCB-deelproduct door CROW
 
 ## Documentatie
-
-
+Voor de vastlegging van de besluiten die in het kadfer van dit hoofdstuk worden genomen vindt plaats in onderstaande documenten:
+* Projectopdracht
+* Vaststelling van een Projectopdracht wordt vastgelegd in het verslag van het relevante Kernteamoverleg
+* Vaststelling van een PCB-deelproduct wordt vastgelegd door:
+  * Ophogen van het versienummer naar het eerstvolgende absolute nummer <x.0>
+  * Opstellen van een 'Positief advies' aan het Kernteam waarin beschreven is hoe toetsing van het product aan de opdracht heeft plaatsgevonde, welke beperkingen eventueel zijn opgetreden, wat het toepassingsgebied en het beoogd gebruik is en tot slot het verzoek aan het Kernteam dit deelproduct te accepteren en voor beoogd gebruik vrij te geven. Dit advies wordt namens het projectteam door voorzitter en secretaris opgesteld en verzonden aan het Kernteam.
+  * Overdracht van het deelproduct aan de beheerder van het CROW Linked Data Platform, onder voorbehoud van vrijgave door het Kernteam.
+* Vrijgave voor Publicatie wordt vastgelegd door een expliciete schriftelijke opdracht door de secretaris van het Kernteam, namens dit Kernteam aan de beheerder van het CROW Linked Data Platform met het verzoek het product te publiceren in het LDP. Daarnaast wordt door de secretaris voorzien in een begeleidende tekst die samen met het product, met ondersteuning van de CROW Webmaster wordt gepubliceerd op de PCB-website.
 
 
 
