--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -25,7 +25,10 @@ Een vastgestelde projectopdracht is tevens het startsein voor de voorzitter en d
 #### Voorbeelddocumenten Aanbesteden en contracteren
 
 #### Eisensets
-Top-down of Bottom-up
+Voor iedere eisenset geldt dat als eerste stappen een functieboom (welke functies moeten vervuld worden en hoe hangen deze taxonomisch samen) en een objectenboom (welke objecten moeten deze functies gaan vervullen en hoe hangen deze taxonomisch samen) opgeseld worden. Hiermee wordt gegarandeerd dat eisen daadwerkelijk bijdragen aan het vervullen van de functies en dat, war mogelijk, een koppeling tussen een eis en één of meerdere objecten geïdentificeerd wordt.
+
+*Top-down of Bottom-up?*
+Voor werkvelden waarin individuele projectteam-deelnemers in de eisensets van hun moederorganisaties kleine hoeveelheden eisen hebben (orde-grootte < 250 eisen) wordt het snelst en effectiefst gewerkt door 
 
 ## Uitvoering
 
@@ -36,8 +39,8 @@ Top-down of Bottom-up
 #### Publicatie PCB-deelproduct door CROW
 
 ## Documentatie
-Voor de vastlegging van de besluiten die in het kadfer van dit hoofdstuk worden genomen vindt plaats in onderstaande documenten:
-* Projectopdracht
+Voor de vastlegging van de besluiten die in het kader van dit hoofdstuk worden genomen vindt plaats in onderstaande documenten:
+* [Projectopdracht](https://github.com/BobNonnekens/PCB/files/7667237/07122021.PCB.Kernteam.Projectopdracht.SJABLOON.v1.1.docx)
 * Vaststelling van een Projectopdracht wordt vastgelegd in het verslag van het relevante Kernteamoverleg
 * Vaststelling van een PCB-deelproduct wordt vastgelegd door:
   * Ophogen van het versienummer naar het eerstvolgende absolute nummer <x.0>
