--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -27,6 +27,8 @@ Een vastgestelde projectopdracht is tevens het startsein voor de voorzitter en d
 #### Eisensets
 Voor iedere eisenset geldt dat als eerste stappen een functieboom (welke functies moeten vervuld worden en hoe hangen deze taxonomisch samen) en een objectenboom (welke objecten moeten deze functies gaan vervullen en hoe hangen deze taxonomisch samen) opgeseld worden. Hiermee wordt gegarandeerd dat eisen daadwerkelijk bijdragen aan het vervullen van de functies en dat, war mogelijk, een koppeling tussen een eis en één of meerdere objecten geïdentificeerd wordt.
 
+![Boom](./hoofdstukken/media/P280-bijlage_II_figuur_23.jpg)
+
 *Top-down of Bottom-up?*
 Voor werkvelden waarin individuele projectteam-deelnemers in de eisensets van hun moederorganisaties kleine hoeveelheden eisen hebben (orde-grootte < 250 eisen) wordt het snelst en effectiefst gewerkt door 
 
