--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -21,6 +21,13 @@ Een vastgestelde projectopdracht is tevens het startsein voor de voorzitter en d
 ## Ontwikkeling
 
 ### Methodieken voor collectief samenstellen PCB-data
+>
+>*Alles wat je niet met mij doet, doe je tegen mij.* (Mahatma Ghandi)
+>
+De basis van ieder PCB-product is dat de projectteam-deelnemers ieder uit hun moederorganisatie standaarden en voorbeelden aandragen die hun aanpak van het voorliggende werkveld representeren. Door het naast elkaar leggen dan deze voorbeelden en deze aan de hand van de bestaande basisteksten (in geval van voorbeelddocumenten) of aan de hand van een functieboom en een objectenboom te ordenen.
+Hierna worden specifieke en lokale teksten / eisen uitgefilterd, deze kunnen in individuele eisensets in het LDP opgenomen worden.
+Niet-generieke criteria, dimensies en/of andere kwantificeringen worden teruggebracht tot invulvelden (variabelen).
+ 
 
 #### Voorbeelddocumenten Aanbesteden en contracteren
 
