--- a/docs/beheerplan/hoofdstukken/h2.md
+++ b/docs/beheerplan/hoofdstukken/h2.md
@@ -1,35 +1,49 @@
 # Strategie
 
+De 12 provincies overleggen regelmatig met elkaar over provincie-overstijgende onderwerpen. Een aantal jaren geleden deelde men ervaringen over geïntegreerd contracteren. Vanuit deze ervaringen is gebleken dat de provincies behoefte hebben om meer uniformiteit aan te brengen in dit type contracten. Hieruit is het samenwerkingsinitiatief PCB ontstaan. Door die samenwerking ontstaat een situatie waarin provincies met en van elkaar kunnen leren. De uniformiteit leidt tot een betere herkenbaarheid van contracten waardoor faalkosten (binnen de keten) worden teruggedrongen. CROW is gevraagd om de ontwikkeling van het PCB te begeleiden. 
+
 ## Governance
 
 <p class="note" title="BOMOS">
-BOMOS eist: De governance van de standaard is voor iedereen helder:
-* De organisatiestructuur
-* De rollen en taken van commissies en van de beheerder
-* De benoeming een neutraliteit van voorzitters
+Omdat het PCB een (nagenoeg) open standaard met vele gebruikers en belanghebbenden is vraagt de organisatie een transparante structuur en praktische, reproduceerbare processen. Daarbij is het wenselijk aan te sluiten bij bestaande structuren die hun waarde hebben bewezen. Voor het PCB is daarom gekozen voor BOMOS, het Beheer- en OntwikkelModel voor Open Standaarden. Zo wordt ook aangesloten bij de standaard die in het BIM-loket en bij COINS wordt toegepast.
+  
+BOMOS eist: De governance van de standaard is voor iedereen helder. In de context van de PCB is de 'standaard' het totaal van organisatie (leden, rollen, processen, procedures) en producten (voorbeelddocumenten, eisensets, besluiten, verslagen, e.d.). Deze Governance komt tot uitdrukking in:
+  
+* De organisatiestructuur;
+  
+* De rollen en taken van organisatieonderdelen en hun leden en van de PCB-beheerder;
+  
+* De benoeming en neutraliteit van voorzitters;
+  
+* De wijze waarop producten tot stand komen, worden vastgesteld en actueel toepasbaar worden gehouden.
 </p>
 
-De 12 provincies overleggen regelmatig met elkaar over provincie-overstijgende onderwerpen. Een aantal jaren geleden deelde men ervaringen over geïntegreerd contracteren. Vanuit deze ervaringen is gebleken dat er vanuit de provincies behoefte is om meer uniformiteit aan te brengen in dit type contracten. Op deze manier ontstaat een situatie waarin provincies met en van elkaar kunnen leren. De uniformiteit leidt tot een betere herkenbaarheid van contracten waardoor faalkosten (binnen de keten) worden teruggedrongen. CROW is gevraagd om de ontwikkeling van het PCB te begeleiden. 
+### Hoofdrolspelers
 
-### Vakberaad en Stuurgroep
+#### Vakberaad en Stuurgroep
 Het Vakberaad van de provincies is opdrachtgever voor het PCB. Het Vakberaad heeft een Stuurgroep in het leven geroepen waarin de provincies Noord-Holland, Zuid-Holland, Overijssel, Noord-Brabant en CROW participeren. De Stuurgroep is verantwoordelijk voor het PCB op strategisch niveau. 
 
-### Kernteam
-Als spin in het web acteert het kernteam. Het kernteam bestaat uit de provincies Noord-Holland, Flevoland, Drenthe, Zuid-Holland, Overijssel, Noord-Brabant, Limburg, Utrecht en CROW. Het kernteam bewaakt de kwaliteit van het PCB op tactisch niveau. 
+#### Kernteam
+Als spin in het web acteert het kernteam. Het kernteam bestaat uit de provincies Noord-Holland, Flevoland, Drenthe, Zuid-Holland, Overijssel, Noord-Brabant, Limburg, Utrecht en CROW. Het kernteam vertaalt het strategisch beleid van de Stuurgroep naar operationele acties en bewaakt de kwaliteit van het PCB op tactisch niveau. 
 
-### Projectteams of werkgroepen
-Om het PCB (door) te ontwikkelen zijn er projectteams nodig. Projectteams worden door het Kernteam ingezet om voorbeelddocumenten op te stellen, om onderzoeken te doen en eisensets te ontwikkelen. De projectteams produceren en vormen het operationele niveau van het PCB. 
+#### Kennisteams (voorheen Projectteams of werkgroepen)
+Om het PCB (door) te ontwikkelen zijn er Kennisteams nodig. Kennisteams worden door het Kernteam ingezet om voorbeelddocumenten op te stellen, om onderzoeken te doen en eisensets te ontwikkelen en om deze actueel en inzetbaar te houden. De Kennisteams produceren en vormen het operationele niveau van het PCB. 
 
-
+#### CROW
+ CROW ondersteunt het PCB in alle lagen van de organisatie door praktische ondersteuning (secretaris- en secretariaatsrollen, faciliteren van bijeenkomsten, faciliteren van systemen) en door praktisch signalen in de PCB-gremia (en raakvlakken) op te vangen, te bundelen en in de vorm van plannen en adviezen ter beoordeling en vaststelling voor te leggen op het juiste niveau in de PCB-organisatie.
+ 
 ## Visie
 Het PCB streeft naar uniformiteit in geïntegreerde contracten met een zekere mate van vrijheid. Dit draagt onder andere bij aan: 
 
 1 - Een netwerk van provincies die elkaar en elkaars werk kennen; 
-2 - Provincies leren van elkaars contracten en aanbestedingen;
-3 - Provincies hebben duidelijke en herkenbare geïntegreerde contracten; 
-4 - Verminderen van faalkosten in de sector.
 
-Het PCB bevat standaarden en instructies voor implementatie bij een provincie. De provincie zorgt voor eigen aanvullingen en toepassingen van het PCB, waarmee het PCB op lokaal niveau aansluit op de organisatie. De provincie is zelf verantwoordelijk voor implementatie van de eigen provinciale contractstandaard in projecten. Daarbij is het adagium: de collectieve PCB documenten en eisen worden gebruikt tenzij een lokale situatie om een afwijking vraagt voor alle geïntegreerde contracten.
+2 - Provincies leren van elkaars contracten en aanbestedingen;
+
+3 - Provincies hebben duidelijke en herkenbare geïntegreerde contracten; 
+
+4 - Verminderen van contracteringskosten (want het wiel hoeft niet opnieuw uitgevonden) en faalkosten (want grotere herkenbaarheid en vermindering interpretatieverschillen) in de sector.
+
+Het PCB bevat standaarden en instructies voor implementatie bij een provincie. De provincie zorgt voor eigen (op lokale situatie gerichte) aanvullingen en toepassingen van het PCB, waarmee het PCB op lokaal niveau aansluit op de organisatie. De provincie is zelf verantwoordelijk voor implementatie van de eigen provinciale contractstandaard in projecten. Daarbij is het adagium: de collectieve PCB documenten en eisen worden gebruikt tenzij een lokale situatie om een afwijking vraagt voor alle geïntegreerde contracten.
 
 ### Businesscase van het PCB voor de gehele keten
 
