--- a/docs/beheerplan/hoofdstukken/h3.md
+++ b/docs/beheerplan/hoofdstukken/h3.md
@@ -27,8 +27,11 @@ Het intellectueel eigendom van ontwikkelde functionaliteiten op het platform dat
 
 #### Inhoudelijke eisen 1: Eisen op basis van publicaties of producten van CROW
 Een aantal inhoudelijke eisen in het PCB is overgenomen of gebaseerd op eisen die in andere publicaties of producten van CROW te vinden zijn. Denk aan de Standaard RAW Bepalingen of de technische publicaties van CROW. Voor zover eisen in het PCB zijn terug te voeren op publicaties of producten van CROW, rust het intellectueel eigendom hiervan volledig bij CROW.
+
 #### Inhoudelijke eisen 2: Collectieve eisenset PCB
-Binnen het PCB zijn werkgroepen actief, die specifieke standaarden opstellen voor contractonderdelen die in principe bij alle provincies in hun UAV-GC-praktijk kunnen terugkomen, zoals bijvoorbeeld wegverhardingen, VRI’s en openbare verlichting. Het intellectueel eigendom van de uitkomst van deze werkgroepen, de zogenaamde ‘collectieve eisensets’, berust bij CROW.
+Binnen het PCB zijn werkgroepen actief, die specifieke standaarden opstellen voor contractonderdelen die in principe bij alle provincies in hun UAV-GC-praktijk kunnen terugkomen, zoals bijvoorbeeld wegverhardingen, VRI’s en openbare verlichting. Uitzondering hierop zijn de eisen specifiek voor de i-VRI's; deze zijn ontleend aan en worden beheerd door publiek private Strategic Committee ‘Borgen en beheren iVRI standaarden en producten’.
+Het intellectueel eigendom van de uitkomst van deze werkgroepen, de zogenaamde ‘collectieve eisensets’, berust bij CROW. 
+
 #### Inhoudelijke eisen 3: Individuele eisenset PCB
 Tot slot is het voor gebruikers mogelijk om binnen het PCB eigen eisensets te introduceren. Het intellectueel eigendom van deze zogenaamde ‘individuele eisensets’ wijzigt niet wanneer de set in het PCB wordt gebracht. Dat betekent dat als de gebruiker de intellectueel eigenaar van de eisenset was, hij dit onverminderd blijft nadat hij deze set aan het PCB heeft toegevoegd.
 Van individueel naar collectief
@@ -50,8 +53,9 @@ Stichting CROW aanvaardt geen aansprakelijkheid voor die problemen die zich als 
 
 Alle rechten waaronder alle intellectuele eigendomsrechten op alle inhoudelijke informatie en het beeldmateriaal op de website blijven te allen tijde voorbehouden aan CROW. Zonder voorafgaande schriftelijke toestemming van CROW is het de gebruiker van deze site niet toegestaan de producten en/of diensten die op deze site worden aangeboden te verveelvoudigen of openbaar te maken. Toestemming kunt u vragen via onze klantenservice.
 
-
-
+### Financieel commitment
+Alle contracten die opgesteld worden met (onder delen van) het PCB zullen worden geregistreerd bij CROW zodat het afdrachtensysteem, noodzakelijk voor beheer en onderhoud van deze set gegaranderd blijft.
+Zie hiervoor Hoofdstuk 2
 
 
 ## Architectuur
