--- a/docs/beheerplan/hoofdstukken/h4.md
+++ b/docs/beheerplan/hoofdstukken/h4.md
@@ -4,7 +4,7 @@
 ## Initiatie
 
 ### Beschrijven Projectopdracht
-In de Jaarplannen worden de geplande deelopdrachten voor het voorliggende jaar beschreven. Elk van deze opdrachten wordt voor start uitgewerkt in een concept-Projectopdracht. 
+In de Jaarplannen worden de geplande deelopdrachten voor het voorliggende jaar beschreven. Elk van deze opdrachten wordt voor start door of namens de CROW Kernteamsecretaris uitgewerkt in een concept-Projectopdracht. 
 Voor het opstellen van de Projectopdracht wordt gebruik gemaakt van de vigerende versie van het sjabloon "Projectopdracht" (zie paragraaf 5. Documentatie).
 
 ### Vaststellen Projectopdracht
@@ -12,19 +12,21 @@ De concept-Projectopdracht wordt aan het Kernteam in haar maandelijkse vergaderc
 * Relevantie ten opzichte van het Jaarprogramma
 * Realistische planning
 * Expliciet doel en resultaat
-* Minimaal vereiste omvang van het samen te stellen projectteam (voldoende representatief voor gehele werkveld)
+* Minimaal vereiste omvang van het samen te stellen Kennisteam (voldoende representatief voor gehele werkveld)
 * Juiste vaststellingsprocedure (criteria, quorum)
-Een vastgestelde projectopdracht is tevens het startsein voor de voorzitter en de secretaris van het beoogde Projectteam (zie paragraaf 3.1.3) om met de opdracht te starten.
+Een vastgestelde projectopdracht is tevens het startsein voor de voorzitter en de secretaris van het beoogde Kennisteam (zie paragraaf 3.1.3) om met de opdracht te starten.
 
 ## Wensen en eisen
+Door voortschrijdend inzicht, na vaststelling van het Jaarplan, kunnen andere wensen en/of eisen ten aanzien van de geformuleerde deelopdrachten ontstaan. Het is aan het Kernteam te besluiten in welke mate deze wensen en eisen gehonoreerd worden. Het Kernteam draagt de secretaris op de Projectopdracht hierop aan te passen. Indien er sprake is van aanpassingen die het oorspronkelijk doel of product in essentie wijzigen (de functie, de doelgroep of het werkingsgebied wijzigen) vraagt het Kernteam hiervoor toestemming aan de Stuurgroep. Eerst na toestem,ming van de Stuurgroep wordt de Projectopdracht conform aangepast.
 
 ## Ontwikkeling
+Onder ontwikkeling in het operationele kader wordt het op- en/of samenstellen van specifieke PCB deelproducten verstaan.
 
 ### Methodieken voor collectief samenstellen PCB-data
 >
 >*Alles wat je niet met mij doet, doe je tegen mij.* (Mahatma Ghandi)
 >
-De basis van ieder PCB-product is dat de projectteam-deelnemers ieder uit hun moederorganisatie standaarden en voorbeelden aandragen die hun aanpak van het voorliggende werkveld representeren. Door het naast elkaar leggen dan deze voorbeelden en deze aan de hand van de bestaande basisteksten (in geval van voorbeelddocumenten) of aan de hand van een functieboom en een objectenboom te ordenen.
+De basis van ieder PCB-product is dat de Kennisteam-deelnemers ieder uit hun moederorganisatie standaarden en voorbeelden aandragen die hun aanpak van het voorliggende werkveld representeren. Door het naast elkaar leggen dan deze voorbeelden en deze aan de hand van de bestaande basisteksten (in geval van voorbeelddocumenten) of aan de hand van een functieboom en een objectenboom te ordenen.
 Hierna worden specifieke en lokale teksten / eisen uitgefilterd, deze kunnen in individuele eisensets in het LDP opgenomen worden.
 Niet-generieke criteria, dimensies en/of andere kwantificeringen worden teruggebracht tot invulvelden (variabelen).
  
@@ -32,18 +34,51 @@ Niet-generieke criteria, dimensies en/of andere kwantificeringen worden teruggeb
 #### Voorbeelddocumenten Aanbesteden en contracteren
 
 #### Eisensets
-Voor iedere eisenset geldt dat als eerste stappen een functieboom (welke functies moeten vervuld worden en hoe hangen deze taxonomisch samen) en een objectenboom (welke objecten moeten deze functies gaan vervullen en hoe hangen deze taxonomisch samen) opgeseld worden. Hiermee wordt gegarandeerd dat eisen daadwerkelijk bijdragen aan het vervullen van de functies en dat, war mogelijk, een koppeling tussen een eis en één of meerdere objecten geïdentificeerd wordt.
+Voor iedere eisenset geldt dat als eerste stappen een functieboom (welke functies moeten vervuld worden en hoe hangen deze taxonomisch samen) en een objectenboom (welke objecten moeten deze functies gaan vervullen en hoe hangen deze taxonomisch samen) opgesteld worden. Hiermee wordt gegarandeerd dat eisen daadwerkelijk bijdragen aan het vervullen van de functies en dat, waar mogelijk, een koppeling tussen een eis en één of meerdere objecten geïdentificeerd wordt. Ook koppelingen aan activiteiten worden zo duidelijk.
 
 ![Boom](./hoofdstukken/media/P280-bijlage_II_figuur_23.jpg)
 
 *Top-down of Bottom-up?*
-Voor werkvelden waarin individuele projectteam-deelnemers in de eisensets van hun moederorganisaties kleine hoeveelheden eisen hebben (orde-grootte < 250 eisen) wordt het snelst en effectiefst gewerkt door 
+Top-down
+Voor werkvelden waarin de individuele kennisteam-deelnemers in de eisensets van hun moederorganisaties grote hoeveelheden eisen hebben (orde-grootte > 500 eisen) wordt het snelst en effectiefst gewerkt door deze top-down op te bouwen. Hiertoe worden de volgende stappen genomen:
+* Het kennisteam legt initieel vast tot welke sub-functielaag (zie de vertakkingen in bovenstaande functieboom) de eisenset zal worden uitgewerkt.
+* Aan de hand van dit uitwerkingsniveau wordt eveneens duidelijk tot welk decompositieniveau in de objectenboom de eisenset uitgewerkt zal worden.
+* Bijeenvoegen alle afzonderlijk ingebrachte eisensets;
+* Verwijderen van alle eisen die in dieper gelegen vertakkingen dan het vastgestelde decompositieniveau van functie- en objectboom vallen;
+* Ontdubbelen van (nagenoeg) identieke eisen;
+* Koppelen van eisen aan functies  en evt. objecten of activiteiten (uit de eerder vastgestelde functieboom en objectenboom, zie hierboven);
+* Eisen die niet aan functies of objecten koppelbaar zijn vallen in principe af, tenzij het Kennisteam hiertoe zwaarwegende argumenten kan aandragen;
+* Alle eisen worden zo generiek en functioneel mogelijk gespecificeerd. Daar waar de eis op generiek niveau door het collectief gedragen wordt maar in gehanteerde normen, dimensies of andere criteria afwijkt worden voor die onderdelen van de betreffende eis variabelen (XX) gebruikt. De contractopsteller kan op die plaats de lokaal gebruikelijke waarde invullen;
+* Alle eisen worden beschreven volgens de PCB-voorschriften hiertoe zoals vastgelegd in de vigerende versie van document <YYY, zie hoofdstuk 5>.
 
+ Bottom-up
+Voor werkvelden waarin individuele kennisteam-deelnemers in de eisensets van hun moederorganisaties kleine hoeveelheden eisen hebben (orde-grootte < 250 eisen) wordt het snelst en effectiefst gewerkt door deze bottom-up samen te voegen. Hiertoe worden de volgende stappen genomen:
+* Bijeenvoegen alle afzonderlijk ingebrachte eisensets;
+* Ontdubbelen van (nagenoeg) identieke eisen;
+* Koppelen van eisen aan functies  en evt. objecten of activiteiten (uit de eerder vastgestelde functieboom en objectenboom, zie hierboven);
+* Eisen die niet aan functies of objecten koppelbaar zijn vallen in principe af, tenzij het Kennisteam hiertoe zwaarwegende argumenten kan aandragen;
+* Alle eisen worden zo generiek en functioneel mogelijk gespecificeerd. Daar waar de eis op generiek niveau door het collectief gedragen wordt maar in gehanteerde normen, dimensies of andere criteria afwijkt worden voor die onderdelen van de betreffende eis variabelen (XX) gebruikt. De contractopsteller kan op die plaats de lokaal gebruikelijke waarde invullen;
+* Alle eisen worden beschreven volgens de PCB-voorschriften hiertoe zoals vastgelegd in de vigerende versie van document <YYY, zie hoofdstuk 5>.
+
+ 
+Voor de werkvelden waarin individuele kennisteam-deelnemers in de eisensets van hun moederorganisaties gemiddelde hoeveelheden eisen hebben (orde-grootte 250 - 500 eisen) ligt de keuze voor Top-down of Bottom-up open. De ervaring leert dat eisensets met een hoge mate van E/W-techniek bij voorkeur Top-down worden benaderd om te voorkomen dat zeer specifieke oplossingen worden afgedwongen (en daarmee de beoogde vrijheidsgraden van een UAV-GC-contract onder druk komen te staan).
+ 
 ## Uitvoering
+De projectopdracht wordt uitgevoerd zoals vastgelegd (zie hierboven) en de status van de voortgang wordt in ieder Kernteamoverleg door de voorzitter van het Kennisteam toegelicht. 
+De opdracht wordt aangepakt zoals beschreven onder bovenstaande paragrafen 'Voorbeelddocumenten' en/of 'Eisensets'.
 
-#### Vaststellen PCB-deelproduct door Projectteam
+#### Vaststellen PCB-deelproduct door Kennisteam
+Zodra de beschreven stappen uit de projectopdracht en de bovenstaande paragrafen 'Voorbeelddocumenten' en/of 'Eisensets' doorlopen zijn (ter toetsing door de Voorzitter en de Secretaris van het Kennisteam) bespreekt het Kennisteam (in een werksessie dan wel via digitale raadpleging) of de leden van het Kennisteam formeel akkoord zijn met de inhoud van het bereikte product.
+Indien dit akkoord niet unaniem  en/of onbezwaard gegeven wordt kan het product nog niet worden vastgesteld. In een plenaire sessie bespreekt het kennisteam de voorliggende bezwaren en lost deze op. Indien een unanimiteit wordt bereikt escaleert de voorzitter van het Kennisteam naar het Kernteam. Deze bespreekt dan in haar eerstvolgend overleg welke vervolgstappen benodigd zijn.
+Zodra het Kennisteam het product inhoudelijk unaniem accepteert toetsen de voorzitter en de secretaris van het Kennisteam nogmaals of aan alle onderdelen van de projectopdracht is voldaan. Bij een negatieve conclusie nemen zij corrigerende acties totdat een positieve conclusie getrokken wordt. Vervolgens wordt een aanbevelingsbrief aan het Kernteam opgesteld waarin de positieve conclusie onderbouwd wordt en de eventuele beperkingen, bezwaren en/of leerpunten ter verbetering van toekomstige acties worden vastgelegd.
+De secretaris dient deze aanbevelingsbrief, samen met het product aan het Kernteam ter vrijgave aan.
 
 #### Vrijgeven PCB-deelproduct door Kernteam
+Zodra het Kernteam een product met aanbevelingsbrief ontvangt agendeert de secretaris van het kernteam deze voor het eerstvolgend Kernteamoverleg ter vrijgave. Het product en de brief wordt met de vergaderstukken aan de Kernteamleden ter voorbereiding aangeboden.
+In de vergadering licht de voorzitter van het betreffende Kennisteam het product, de toets aan de opdracht en de vaststelling en markante onderdelen van het product of proces toe, evenals de eventuele beperkingen, bezwaren en/of leerpunten.
+Het Kernteam beoordeelt of dit proces zorgvuldig is doorlopen en of het product daardoor inderdaad op grote lijnen voldoet aan de verwachting. Het Kernteam beoordeelt nadrukkelijk niet op de inhoud van het product.
+Met een positief oordeel verleent het Kernteam vrijgave ter publicatie en gebruik door de doelgroep en verleent tevens -onder dankzegging- décharge aan het Kennisteam ten aanzien van vrijgegeven product.
+Bij een negatief oordeel stemt het Kernteam met de voorzitter en secretaris van betreffend Kennisteam de gewenste corrigerende acties af. Het Kernteam heeft de bevoegdheid hierin een voorwaardelijke vrijgave toe te kennen.
 
 #### Publicatie PCB-deelproduct door CROW
 
@@ -53,10 +88,10 @@ Voor de vastlegging van de besluiten die in het kader van dit hoofdstuk worden g
 * Vaststelling van een Projectopdracht wordt vastgelegd in het verslag van het relevante Kernteamoverleg
 * Vaststelling van een PCB-deelproduct wordt vastgelegd door:
   * Ophogen van het versienummer naar het eerstvolgende absolute nummer <x.0>
-  * Opstellen van een 'Positief advies' aan het Kernteam waarin beschreven is hoe toetsing van het product aan de opdracht heeft plaatsgevonde, welke beperkingen eventueel zijn opgetreden, wat het toepassingsgebied en het beoogd gebruik is en tot slot het verzoek aan het Kernteam dit deelproduct te accepteren en voor beoogd gebruik vrij te geven. Dit advies wordt namens het projectteam door voorzitter en secretaris opgesteld en verzonden aan het Kernteam.
+  * Opstellen van een 'Positief advies' aan het Kernteam waarin beschreven is hoe toetsing van het product aan de opdracht heeft plaatsgevonde, welke beperkingen eventueel zijn opgetreden, wat het toepassingsgebied en het beoogd gebruik is en tot slot het verzoek aan het Kernteam dit deelproduct te accepteren en voor beoogd gebruik vrij te geven. Dit advies wordt namens het kennisteam door voorzitter en secretaris opgesteld en verzonden aan het Kernteam.
   * Overdracht van het deelproduct aan de beheerder van het CROW Linked Data Platform, onder voorbehoud van vrijgave door het Kernteam.
-* Vrijgave voor Publicatie wordt vastgelegd door een expliciete schriftelijke opdracht door de secretaris van het Kernteam, namens dit Kernteam aan de beheerder van het CROW Linked Data Platform met het verzoek het product te publiceren in het LDP. Daarnaast wordt door de secretaris voorzien in een begeleidende tekst die samen met het product, met ondersteuning van de CROW Webmaster wordt gepubliceerd op de PCB-website.
+* Vrijgave voor Publicatie wordt vastgelegd in het vergaderverslag van het Kernteamoverleg waarin de vrijgave heeft plaatsgevonden. Dit wordt opgevolgd door een expliciete schriftelijke opdracht door de secretaris van het Kernteam, namens dit Kernteam aan de beheerder van het CROW Linked Data Platform met het verzoek het product te publiceren in het LDP. Daarnaast wordt door de secretaris voorzien in een begeleidende tekst die samen met het product, met ondersteuning van de CROW Webmaster wordt gepubliceerd op de PCB-website.
 
-
+## Beheer
 
 
