--- a/docs/beheerplan/hoofdstukken/h2.md
+++ b/docs/beheerplan/hoofdstukken/h2.md
@@ -21,16 +21,30 @@ BOMOS eist: De governance van de standaard is voor iedereen helder. In de contex
 ### Hoofdrolspelers
 
 #### Vakberaad en Stuurgroep
-Het Vakberaad van de provincies is opdrachtgever voor het PCB. Het Vakberaad heeft een Stuurgroep in het leven geroepen waarin de provincies Noord-Holland, Zuid-Holland, Overijssel, Noord-Brabant en CROW participeren. De Stuurgroep is verantwoordelijk voor het PCB op strategisch niveau. 
+Het Vakberaad van de provincies is opdrachtgever voor het PCB. Het Vakberaad heeft een Stuurgroep in het leven geroepen waarin de provincies Noord-Holland, Zuid-Holland, Overijssel, Noord-Brabant en CROW participeren. De Stuurgroep is verantwoordelijk voor het PCB op strategisch niveau.
+
 
 #### Kernteam
-Als spin in het web acteert het kernteam. Het kernteam bestaat uit de provincies Noord-Holland, Flevoland, Drenthe, Zuid-Holland, Overijssel, Noord-Brabant, Limburg, Utrecht en CROW. Het kernteam vertaalt het strategisch beleid van de Stuurgroep naar operationele acties en bewaakt de kwaliteit van het PCB op tactisch niveau. 
+Het kernteam acteert als spin in het web. Het kernteam vertaalt het strategisch beleid van de Stuurgroep naar operationele acties en bewaakt de kwaliteit van het PCB op tactisch niveau.
+De Kernteamleden worden door hun respectieve provincies vrijgemaakt om de doelen van het Kernteam te bewerkstelligen. Het PCB heeft geen rechstreekse invloed op de keuze van de voorgestelde personen. Het kernteam bestaat uit de provincies Noord-Holland, Flevoland, Drenthe, Zuid-Holland, Overijssel, Noord-Brabant, Limburg, Utrecht en CROW. 
+De voorzitter van het Kernteam wordt uit haar midden door de Kernteamleden zelf gekozen. Bij het vrijvallen van de voorzitterszetel kunnen Kernteamleden zich kandideren voor deze rol, naargelang hun beschikbaarheid. De voorzitter wordt bij algemene meerderheid van stemmen door de kernteamleden (bij handopsteken) verkozen. Er is geen vastgestelde zittingstermijn (minimum noch maximum). Omwille van de effectiviteit lijkt een minimale zittingstermijn wenselijk, echter dit is niet vastgelegd.
 
-#### Kennisteams (voorheen Projectteams of werkgroepen)
-Om het PCB (door) te ontwikkelen zijn er Kennisteams nodig. Kennisteams worden door het Kernteam ingezet om voorbeelddocumenten op te stellen, om onderzoeken te doen en eisensets te ontwikkelen en om deze actueel en inzetbaar te houden. De Kennisteams produceren en vormen het operationele niveau van het PCB. 
+#### Kennisteams
+Om het PCB (door) te ontwikkelen zijn er Kennisteams (voorheen Projectteams of werkgroepen) nodig. Kennisteams worden door het Kernteam ingezet om voorbeelddocumenten op te stellen, om onderzoeken te doen en eisensets te ontwikkelen en om deze actueel en inzetbaar te houden. De Kennisteams produceren en vormen het operationele niveau van het PCB.+ 
+De leden van de kennisteams worden door de deelnemende provincies vrijgemaakt en voorgedragen op grond van hun expliciete kennis van het relevante vakgebied van het kennisteam. Bij het vaststellen van de (deel)pProjectopdracht (zie hoofdstuk 4) worden de voorgedragen Kennisteamleden door het Kernteam beoordeeld op verwachte geschiktheid.
+Een Kennisteam wordt voor onbepaalde duur samengesteld zodat haar leden niet alleen een nieuw product ontwikkelen maar deze later tevens onderhouden. De leden blijven in functie zolang hun vakgebied en beschikbaarheid in overeenstelling met hun rol in het Kennisteam blijft. Bij vertrek van leden stellen deze in beginsel een opvolger uit de eigen moederorganisatie voor. Indien deze opvolging niet mogelijk of voor het Kernteam acceptabel is wordt een vervanger bij de overige provincies gezocht. Dit op initiatief van en onder begeleiding van het Kernteam.
 
 #### CROW
- CROW ondersteunt het PCB in alle lagen van de organisatie door praktische ondersteuning (secretaris- en secretariaatsrollen, faciliteren van bijeenkomsten, faciliteren van systemen) en door praktisch signalen in de PCB-gremia (en raakvlakken) op te vangen, te bundelen en in de vorm van plannen en adviezen ter beoordeling en vaststelling voor te leggen op het juiste niveau in de PCB-organisatie.
+CROW ondersteunt het PCB in alle lagen van de organisatie door praktische ondersteuning (secretaris- en secretariaatsrollen, faciliteren van bijeenkomsten, faciliteren van systemen) en door praktisch signalen in de PCB-gremia (en raakvlakken) op te vangen, te bundelen en in de vorm van plannen en adviezen ter beoordeling en vaststelling voor te leggen op het juiste niveau in de PCB-organisatie.
+CROW levert in ieder geval de volgende rollen:
+* Secretaris van de Stuurgroep;
+* Secretaris van het Kernteam;
+* Secretaris voor ieder Kennisteam;
+* Projectleider voor het Jaarprogramma over-all;
+* Projectleider voor de deelprojecten uit het Jaarprogramma.
+* 
+Eén CROW'er kan meerdere rollen vervullen. CROW bepaalt zelf wie welke rol vervult en is verantwoordelijk voor continuïteit en overdracht.
+
  
 ## Visie
 Het PCB streeft naar uniformiteit in geïntegreerde contracten met een zekere mate van vrijheid. Dit draagt onder andere bij aan: 
